--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -167,3 +167,10 @@ h4 {
   height: 51px;
   cursor: pointer;
 }
+
+.result {
+  background-color: black;
+  font-weight: bold;
+  color: white;
+}
+
